--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/oshanQQ/npm-self-introduction/issues"
   },
-  "homepage": "https://github.com/oshanQQ/npm-self-introduction#readme"
+  "homepage": "https://github.com/oshanQQ/npm-self-introduction#readme",
+  "devDependencies": {
+    "ts-loader": "^8.1.0",
+    "typescript": "^4.2.3",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0"
+  }
 }
