--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oshanQQ/npm-self-introduction#readme",
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
