--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "typescript": "^4.2.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0"
+  },
+  "bin": {
+    "ts-sample": "./bin/ts-sample.js"
   }
 }
