--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Self introduction command",
   "bin": {
-    "npm-cli-sample": "bin/npm-cli-sample"
+    "o-xian": "src/main.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/main.js"
   },
   "repository": {
     "type": "git",
