🔧 Set npm command name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm-self-introduction",
+  "name": "o-xian",
   "version": "1.0.0",
   "description": "Self introduction command",
   "bin": {
